<resources>
    <string name="app_name">About Me</string>
    <string name="grace">Ogunsina Grace</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="what_is_your_nick_name">What is your Nickname?</string>
    <string name="about_grace">• Previous work experience: I previously worked as a Recruiter with Sellafield Energy, Lekki (An oil and gas servicing firm).Prior to that, I was a Writer/Editor with Daily Independent Newspapers, Ikeja "\n• Course of Study : Political Science "\n• University attended : Obafemi Awolowo University (OAU) "\n• Positive traits: I am hardworking, friendly and lovable, positive-minded and considerate towards others "\n• Hobbies and interests : I enjoy travelling, reading, going out, writing and talking politics "\n• Role model and why: I admire Ibukun Awosika. She is an embodiment of conscientious work ethic, love for God and her fashion choices "\n• Most unique thing about you: I would say the way I view the world "\n• Other interesting information : Well, I am a twin. An identical one. (Don’t get confused, lol). Not much of a foodie, but I like to do the cooking and recipe-building "\n• Most memorable moment/happiest moment(s): My happiest moments are the times I spend around my siblings "\n• Favourite colour: Red is hot!!! </string>
    <string name="done">Done</string>
    <string name="mosope"> My name is Okunola Precious Oluwamosope,I am the first of three children, I am 26 years old, I am a native of Ibadan, Oyo state,I was born and bred in Akure, Ondo state,I am a Medical Laboratory Scientist by profession. My hobbies are cooking,singing,travelling and reading. I love my God. My best food is amala with abula and goat meat. My favorite color is any shade of purple. I currently work with Medical Laboratory Science Council of Nigeria, Public Health In-Vitro Diagnostics Control Laboratory, Yaba, Lagos state. I am currently a graduate student of University of Ibadan, Ibadan Oyo State, majoring in Chemical Pathology. I am hardworking and a lovable person."\n My dislikes are cheating and dishonesty."\n I like making friends.</string>
</resources>