<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="myName"
            type="com.example.aboutme.MyName" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={myName.name}"
            android:textAlignment="center"
            tools:text="@string/grace"
            style="@style/name_style" />

        <EditText
            android:id="@+id/nickname_edit"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_nick_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#78909C"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_italic"
            android:layout_marginTop="@dimen/layout_margin"
            android:text="@string/done" />

        <TextView
            android:id="@+id/nickname_text"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:textAlignment="center"
            android:text="@={myName.nickname}"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/star_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:contentDescription="@string/yellow_star"
            app:srcCompat="@android:drawable/btn_star_big_on"
            tools:ignore="ImageContrastCheck" />

<!--        <ScrollView-->
<!--            android:id="@+id/bio_scrollview"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginTop="@dimen/layout_margin">-->

<!--            <TextView-->
<!--                android:id="@+id/bio_text"-->
<!--                style="@style/name_style"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:lineSpacingMultiplier="@dimen/space_multiplier"-->
<!--                android:paddingLeft="@dimen/padding_start"-->
<!--                android:paddingRight="@dimen/padding_start"-->
<!--                android:text="@string/about_grace"-->
<!--                android:textAlignment="viewStart" />-->
<!--        </ScrollView>-->

        <androidx.core.widget.NestedScrollView
            android:id="@+id/bio_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_margin">

        <TextView
            android:id="@+id/bio_text"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="@dimen/space_multiplier"
            android:paddingLeft="@dimen/padding_start"
            android:paddingRight="@dimen/padding_start"
            android:text="@string/about_grace"
            android:textAlignment="viewStart" />
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>